--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "backend-appdrmylena",
+  "name": "backend-dms",
   "version": "1.0.0",
   "description": "",
-  "main": "router.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
